--- a/test/test.csproj
+++ b/test/test.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.11.0" />
+    <PackageReference Include="CsvHelper" Version="7.1.1" />
   </ItemGroup>
 
   <ItemGroup>
