Move csv files to shared location. Add tests for LineParsing. Add chunk size setting to streamparser

--- a/Benchmarks/Benchmarks.csproj
+++ b/Benchmarks/Benchmarks.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="*.csv" />
+    <EmbeddedResource Include="../csv/*.csv" />
   </ItemGroup>
 
 </Project>
