--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="../csv/*.csv" />
+  </ItemGroup>
+
 </Project>
