--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -6,7 +6,7 @@
 
   
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
