--- a/src/Chipotle.CSV.csproj
+++ b/src/Chipotle.CSV.csproj
@@ -1,14 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="System.IO" Version="4.3.0" />
-    <PackageReference Include="System.IO.Pipelines" Version="4.5.1" />
-    <PackageReference Include="System.Memory" Version="4.5.1" />
-  </ItemGroup>
-
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<nullable>disable</nullable>
+	</PropertyGroup>
+	<ItemGroup>
+	  <PackageReference Include="System.IO.Pipelines" Version="6.0.2" />
+	</ItemGroup>
 </Project>
