--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -6,7 +6,8 @@
 
   
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net8</TargetFramework>
+      <LangVersion>Latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
