--- a/src/Chipotle.CSV.csproj
+++ b/src/Chipotle.CSV.csproj
@@ -1,14 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7</TargetFramework>
+		<LangVersion>latest</LangVersion>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="System.IO" Version="4.3.0" />
-    <PackageReference Include="System.IO.Pipelines" Version="4.5.1" />
-    <PackageReference Include="System.Memory" Version="4.5.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="System.IO" Version="4.3.0" />
+		<PackageReference Include="System.IO.Pipelines" Version="4.5.1" />
+		<PackageReference Include="System.Memory" Version="4.5.1" />
+	</ItemGroup>
 
 </Project>
